--- a/buisnes.html
+++ b/buisnes.html
@@ -41,7 +41,7 @@
         <div class="container header_two">
             <div class="logo">
                 <a href="" class="logo_item">
-                    <img src="img/logo_png.png" alt="logo_png" class="header_logo-one">
+                    <img src="img/logo_svg.svg" alt="logo_png" class="header_logo-one">
                     <img src="img/footer_logo.png" alt="logo_png" class="header_logo-two">
                 </a>
             </div>
@@ -56,7 +56,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="nuber_call">
+                <div class="number_call">
                     <div class="number">
                         <a href="" class="phone_number">+7 929 106 02 06</a>
                     </div>
@@ -215,7 +215,7 @@
                     </h2>
                     <div class="advantages__wrapper">
                         <div class="__item">
-                            <div class="advantages__img">
+                            <div class="advantages__img heart">
                                 <img src="img/heal.png" alt="heart">
                             </div>
                             <h3>
@@ -227,7 +227,7 @@
                             </p>
                         </div>
                         <div class="__item">
-                            <div class="advantages__img">
+                            <div class="advantages__img eco">
                                 <img src="img/eco.png" alt="eco">
                             </div>
                             <h3>
@@ -238,7 +238,7 @@
                             </p>
                         </div>
                         <div class="__item">
-                            <div class="advantages__img">
+                            <div class="advantages__img money">
                                 <img src="img/money.png" alt="money">
                             </div>
                             <h3>
@@ -249,7 +249,7 @@
                             </p>
                         </div>
                         <div class="__item">
-                            <div class="advantages__img">
+                            <div class="advantages__img advertising">
                                 <img src="img/advertising.png" alt="advertising">
                             </div>
                             <h3>
@@ -393,7 +393,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="__item">
+                        <div class="__item __item-phone">
                             <img src="img/room_one.jpg" alt="room">
                         </div>
                         <p>
@@ -438,7 +438,7 @@
                             ЗАКАЗАТЬ ЗВОНОК
                         </button>
 
-                        <div class="__item">
+                        <div class="__item __item-phone">
                             <img src="img/room_two.jpg" alt="room">
                         </div>
                 </div>
@@ -583,7 +583,9 @@
         <div class="footer_two">
             <div class="container footer_last">
                 <div class="footer_item">
-                    <img src="img/footer_logo.png" alt="logo" class="footer_logo">
+                    <div class="footer_logo">
+                        <img src="img/footer_logo.svg" alt="logo" class="footer_logo">
+                    </div>
                     <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
@@ -635,18 +637,29 @@
                         </nav>
                     </div>
                 </div>
-
                 <div class="footer_item">
-                    <a href="" class="footer_descr footer_descr_phone">
+                    <p class="footer_descr footer_descr_phone">
                         Свяжитесь с нами
-                    </a>
+                    </p>
                     <div class="footer_icon">
-                        <a href=""><img src="img/inst.png" alt="inst"></a>
-                        <a href=""><img src="img/fb.png" alt="facebook"></a>
-                        <a href=""><img src="img/vk.png" alt="vkontakte"></a>
-                        <a href=""><img src="img/tg.png" alt="telegram"></a>
-                        <a href=""><img src="img/wa.png" alt="watsapp"></a>
-                        <a href=""><img src="img/viber.png" alt="viber"></a>
+                        <a href="" >
+                            <div class="inst_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="fb_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vk_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="tg_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="wa_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vb_ico"></div>
+                        </a>
                     </div>
                     <a href="" class="footer_descr">
                         Политика конфиденциальности
