--- a/equipment.html
+++ b/equipment.html
@@ -41,7 +41,7 @@
         <div class="container header_two">
             <div class="logo">
                 <a href="" class="logo_item">
-                    <img src="img/logo_png.png" alt="logo_png" class="header_logo-one">
+                    <img src="img/logo_svg.svg" alt="logo_png" class="header_logo-one">
                     <img src="img/footer_logo.png" alt="logo_png" class="header_logo-two">
                 </a>
             </div>
@@ -56,7 +56,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="nuber_call">
+                <div class="number_call">
                     <div class="number">
                         <a href="" class="phone_number">+7 929 106 02 06</a>
                     </div>
@@ -155,7 +155,7 @@
                     <div class="wrapper wrapper_two">
                         <div class="__items-equipment_two">
                             <div class="__item">
-                                <p>
+                                <p class="number">
                                     01
                                 </p>
                                 <p>
@@ -167,7 +167,7 @@
                         <div class="__items-equipment_two">
                             <div class="__item">
                                 <div class="__item">
-                                    <p>
+                                    <p class="number">
                                         02
                                     </p>
                                     <p>
@@ -190,20 +190,20 @@
                             <div>
                                 <img src="img/pom_2.jpg" alt="pom">
                             </div>
-                            <p>
+                            <p class="__descr">
                                 <span>Самые маленькие аппараты</span> «прокачивают» до 30 куб.м., это пещера 12 кв.м. при высоте потолка 2,5 м, например аэрогалитгенератор АГГ-01 Аэросоль.
 
                             </p>
                         </div>
                         <div class="__item">
                             <div>
-                                <p>
+                                <p class="__descr">
                                     <span>«Средние» аппараты</span> ограничены объёмом 50 куб.м.
                                 </p>
                                 <img src="img/pom_3.jpg" alt="pom" class="pom">
                             </div>
                             <div>
-                                <p>
+                                <p class="__descr">
                                     <span>Самые мощные</span> устанавливают в пещеры объёмом до 85, 100 и 120 куб.м, например галогенератор (аэрогалитгенератор) АГГ-03
                                 </p>
                                 <img src="img/pom_4.jpg" alt="pom" class="pom_4">
@@ -337,7 +337,9 @@
         <div class="footer_two">
             <div class="container footer_last">
                 <div class="footer_item">
-                    <img src="img/footer_logo.png" alt="logo" class="footer_logo">
+                    <div class="footer_logo">
+                        <img src="img/footer_logo.svg" alt="logo" class="footer_logo">
+                    </div>
                     <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
@@ -389,18 +391,29 @@
                         </nav>
                     </div>
                 </div>
-
                 <div class="footer_item">
-                    <a href="" class="footer_descr footer_descr_phone">
+                    <p class="footer_descr footer_descr_phone">
                         Свяжитесь с нами
-                    </a>
+                    </p>
                     <div class="footer_icon">
-                        <a href=""><img src="img/inst.png" alt="inst"></a>
-                        <a href=""><img src="img/fb.png" alt="facebook"></a>
-                        <a href=""><img src="img/vk.png" alt="vkontakte"></a>
-                        <a href=""><img src="img/tg.png" alt="telegram"></a>
-                        <a href=""><img src="img/wa.png" alt="watsapp"></a>
-                        <a href=""><img src="img/viber.png" alt="viber"></a>
+                        <a href="" >
+                            <div class="inst_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="fb_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vk_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="tg_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="wa_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vb_ico"></div>
+                        </a>
                     </div>
                     <a href="" class="footer_descr">
                         Политика конфиденциальности
