--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="nav_list container">
                 <ul class="nav_menu">
                     <li class="nav_menu__items">
-                        <a href="#" class="menu menu_one">ГЛАВНАЯ</a>
+                        <a href="index.html" class="menu menu_one">ГЛАВНАЯ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="buisnes.html" class="menu">БИЗНЕС-ИДЕИ</a>
@@ -44,7 +44,7 @@
         <div class="container header_two">
             <div class="logo">
                 <a href="" class="logo_item">
-                    <img src="img/logo_png.png" alt="logo_png" class="header_logo-one">
+                    <img src="img/logo_svg.svg" alt="logo_png" class="header_logo-one">
                     <img src="img/footer_logo.png" alt="logo_png" class="header_logo-two">
                 </a>
             </div>
@@ -789,7 +789,9 @@
                 <div class="team_item swiper swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide team_item__block">
-                            <img src="img/team_img_one.jpg" alt="team_img" class="tem_img">
+                            <div class="team__img">
+                                <img src="img/team_img_one.jpg" alt="team_img">
+                            </div>
                             <h3 class="team_name">
                                 Олег Власов
                             </h3>
@@ -802,7 +804,9 @@
                         </div>
                         <div class="swiper-slide team_item__block">
                             <div class="items">
-                                <img src="img/team_img_two.jpg" alt="team_img" class="team_img">  
+                                <div class="team__img">
+                                    <img src="img/team_img_two.jpg" alt="team_img">
+                                </div> 
                                 <h3 class="team_name">
                                     Екатерина
                                 </h3>
@@ -816,7 +820,9 @@
                         </div>
                         <div class="swiper-slide team_item__block">
                             <div class="items">
-                                <img src="img/team_img_three.jpg" alt="team_img" class="team_img">  
+                                <div class="team__img">
+                                    <img src="img/team_img_three.jpg" alt="team_img">
+                                </div>  
                                 <h3 class="team_name">
                                     Антон
                                 </h3>
@@ -830,7 +836,9 @@
                         </div>
                         <div class="swiper-slide team_item__block">
                             <div class="items">
-                                <img src="img/team_img_four.jpg" alt="team_img" class="team_img"> 
+                                <div class="team__img">
+                                    <img src="img/team_img_four.jpg" alt="team_img">
+                                </div>
                                 <h3 class="team_name">
                                     Максим
                                 </h3>
@@ -998,7 +1006,9 @@
         <div class="footer_two">
             <div class="container footer_last">
                 <div class="footer_item">
-                    <img src="img/footer_logo.png" alt="logo" class="footer_logo">
+                    <div class="footer_logo">
+                        <img src="img/footer_logo.svg" alt="logo" class="footer_logo">
+                    </div>
                     <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
@@ -1055,12 +1065,24 @@
                         Свяжитесь с нами
                     </p>
                     <div class="footer_icon">
-                        <a href=""><img src="img/inst.png" alt="inst"></a>
-                        <a href=""><img src="img/fb.png" alt="facebook"></a>
-                        <a href=""><img src="img/vk.png" alt="vkontakte"></a>
-                        <a href=""><img src="img/tg.png" alt="telegram"></a>
-                        <a href=""><img src="img/wa.png" alt="watsapp"></a>
-                        <a href=""><img src="img/viber.png" alt="viber"></a>
+                        <a href="" >
+                            <div class="inst_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="fb_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vk_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="tg_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="wa_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vb_ico"></div>
+                        </a>
                     </div>
                     <a href="" class="footer_descr">
                         Политика конфиденциальности
