--- a/gallery_item.html
+++ b/gallery_item.html
@@ -41,7 +41,7 @@
         <div class="container header_two">
             <div class="logo">
                 <a href="" class="logo_item">
-                    <img src="img/logo_png.png" alt="logo_png" class="header_logo-one">
+                    <img src="img/logo_svg.svg" alt="logo_png" class="header_logo-one">
                     <img src="img/footer_logo.png" alt="logo_png" class="header_logo-two">
                 </a>
             </div>
@@ -56,7 +56,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="nuber_call">
+                <div class="number_call">
                     <div class="number">
                         <a href="" class="phone_number">+7 929 106 02 06</a>
                     </div>
@@ -92,19 +92,18 @@
         </section>
             <section class="swiper_gallery">
             <div class="container">
+
+                
                 <div class="slider__gallery swiper swiper-container">
                     <div class="swiper-wrapper slider__gallery-items">
                         <div class="swiper-slide gallery__img">
                             <img src="img/gallery_item_1.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_2.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_3.jpg" alt="">
                         </div>
                     </div>
                     <div class="article__arrow">
@@ -122,16 +121,13 @@
                 <div class="slider__gallery swiper swiper-container">
                     <div class="swiper-wrapper slider__gallery-items">
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_4.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_5.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_6.jpg" alt="">
                         </div>
                     </div>
                     <div class="article__arrow">
@@ -149,16 +145,13 @@
                 <div class="slider__gallery swiper swiper-container">
                     <div class="swiper-wrapper slider__gallery-items">
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_7.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_8.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_9.jpg" alt="">
                         </div>
                     </div>
                     <div class="article__arrow">
@@ -176,16 +169,13 @@
                 <div class="slider__gallery swiper swiper-container">
                     <div class="swiper-wrapper slider__gallery-items">
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_10.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_11.jpg" alt="">
                         </div>
                         <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide gallery__img">
-                            <img src="img/gallery_item_1.jpg" alt="">
+                            <img src="img/gallery_item_12.jpg" alt="">
                         </div>
                     </div>
                     <div class="article__arrow">
@@ -240,7 +230,9 @@
         <div class="footer_two">
             <div class="container footer_last">
                 <div class="footer_item">
-                    <img src="img/footer_logo.png" alt="logo" class="footer_logo">
+                    <div class="footer_logo">
+                        <img src="img/footer_logo.svg" alt="logo" class="footer_logo">
+                    </div>
                     <p class="footer_descr footer_descr__none">
                         © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
                     </p>
@@ -292,18 +284,29 @@
                         </nav>
                     </div>
                 </div>
-
                 <div class="footer_item">
-                    <a href="" class="footer_descr footer_descr_phone">
+                    <p class="footer_descr footer_descr_phone">
                         Свяжитесь с нами
-                    </a>
+                    </p>
                     <div class="footer_icon">
-                        <a href=""><img src="img/inst.png" alt="inst"></a>
-                        <a href=""><img src="img/fb.png" alt="facebook"></a>
-                        <a href=""><img src="img/vk.png" alt="vkontakte"></a>
-                        <a href=""><img src="img/tg.png" alt="telegram"></a>
-                        <a href=""><img src="img/wa.png" alt="watsapp"></a>
-                        <a href=""><img src="img/viber.png" alt="viber"></a>
+                        <a href="" >
+                            <div class="inst_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="fb_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vk_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="tg_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="wa_ico"></div>
+                        </a>
+                        <a href="" >
+                            <div class="vb_ico"></div>
+                        </a>
                     </div>
                     <a href="" class="footer_descr">
                         Политика конфиденциальности
