--- a/buisnes.html
+++ b/buisnes.html
@@ -393,7 +393,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="__item __item-phone">
+                        <div class=" __item-phone">
                             <img src="img/room_one.jpg" alt="room">
                         </div>
                         <p>
