--- a/cart_product.html
+++ b/cart_product.html
@@ -74,7 +74,7 @@
     </header>
 
     <main>
-        <section class="main_product">
+        <section class="main_product main_product_none">
             <div class="container">
                 <div class="promo_product">
                     <div class="__item">
