--- a/equipment.html
+++ b/equipment.html
@@ -83,7 +83,7 @@
                                 НА ГЛАВНУЮ
                             </a>
                             <h3>
-                                КАК ВЫБРАТЬ ОБОРУДОВАНИЕ ДЛЯ СОЛЯНОЙ ПЕЩЕРЫ И ГАЛОКАМЕРЫ
+                                КАК ВЫБРАТЬ ОБОРУДОВАНИЕ <span>ДЛЯ СОЛЯНОЙ ПЕЩЕРЫ И ГАЛОКАМЕРЫ</span> 
                             </h3>
                         </div>
                     </div>
