--- a/index.html
+++ b/index.html
@@ -776,6 +776,8 @@
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-work-next"><img src="img/Polygon_two.png" alt=""></div>
+                    <div class="swiper-work-prev"><img src="img/Polygon.png" alt=""></div>
                     <div class="swiper-phone-next"><img src="img/phone_arrow_prev.svg" alt=""></div>
                     <div class="swiper-phone-prev"><img src="img/phone_arrow_next.svg" alt=""></div>
                 </div>
@@ -1105,7 +1107,9 @@
     
     <div class="overlay">
         <div class="wrapper__form">
-            <video src="video/Peter & Gwen┃hold on (Edit) (720p).mp4" controls width="100%"></video>
+            <video src="video/Peter & Gwen┃hold on (Edit) (720p).mp4" id="youVideoId" controls width="100%">
+
+            </video>
         </div>
     </div>
 
