--- a/popup.html
+++ b/popup.html
@@ -7,104 +7,103 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.min.css">
+
     <title>Сол-Терра</title>
 </head>
 <body>
-    
-    <button class="popup_one">
-        popup
-    </button>
+<a href="#" class="js-open-modal" data-modal="1">Открыть окно 1</a>
+<a href="#" class="js-open-modal" data-modal="2">Открыть окно 2</a>
+<a href="#" class="js-open-modal" data-modal="3">Открыть окно 3</a>
+<a href="#" class="js-open-modal" data-modal="4">Открыть окно 4</a>
 
-    <button class="popup_two">
-        popup_two
-    </button>
+<div class="modal wrapper__form" data-modal="1">
+  <h2 class="modal__title">Заказать звонок</h2>
+  <form action="" class="form__items">
+      <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
+    <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
+    <p>
+      Поля, отмеченные *, обязательны для заполнения.
+  </p>
+  <label for="#" class="modal_privacy">
+    <input type="checkbox" checked="checked"  required>
+    <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
+  </label>
+    <button class="modal-form_btn wpcf7-submit">ОТПРАВИТЬ ЗАПРОС</button>
+  </form>
+</div>
 
-    <button class="popup_three">
-        popup_three
-    </button>
+<div class="modal wrapper__form" data-modal="2">
+  <h2 class="modal__title">Задать вопрос</h2>
+  <form action="" class="form__items">
+      <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
+    <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
+    <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш E-mail*">
+    <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control textarea" required  placeholder="Задайте ваш вопрос*"></textarea>
+    <p>
+      Поля, отмеченные *, обязательны для заполнения.
+  </p>
+  <label for="#" class="modal_privacy">
+    <input type="checkbox" checked="checked"  required>
+    <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
+  </label>
+    <button class="modal-form_btn wpcf7-submit">ОТПРАВИТЬ</button>
+  </form>
+</div>
+<div class="modal wrapper__form" data-modal="3">
+  <h2 class="modal__title">Заказать звонок</h2>
+  <form action="" class="form__items">
+      <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
+    <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
+    <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш E-mail*">
+    <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control text" required  placeholder="Ваше сообщение*"></textarea>
+    <p>
+      Поля, отмеченные *, обязательны для заполнения.
+  </p>
+  <label for="#" class="modal_privacy">
+    <input type="checkbox" checked="checked"  required>
+    <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
+  </label>
+    <button class="modal-form_btn wpcf7-submit">ЗАКАЗАТЬ ЗВОНОК</button>
+  </form>
+</div>
 
-    <button class="popup_four">
-        popup_four
-    </button>
+
+<div class="overlay js-overlay-modal">
+
+</div>
+<div class="overlay_foure js-overlay-modal">
+  <div class="modal wrapper__form wrapper__form_foure" data-modal="4">
+    <h2 class="modal__title">Оставить заявку</h2>
+    <form action="" class="form__items">
+        <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
+      <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
+      <input name="email" type="email" id="email" class="modal-form__input wpcf7-form-control"  placeholder="Ваш E-mail">
+      <input name="text" type="text" id="text" class="modal-form__input wpcf7-form-control"   required placeholder="Город монтажа*">
+      <input name="text" type="text" id="text" class="modal-form__input wpcf7-form-control"   required placeholder="Площадь помещения*">
+      <div class="input_wrapper" data-required="Максимум 2000 символов">
+        <textarea   name="" id="" cols="30" rows="10" class="wpcf7-form-control text" required  placeholder="Оставьте ваши пожелания, мы их обязательно учтем (по дизайну, галогенератору, бюджету)"></textarea>
+      </div>
+      <p>
+        Поля, отмеченные *, обязательны для заполнения.
+    </p>
+    <label for="#" class="modal_privacy">
+      <input type="checkbox" checked="checked"  required>
+      <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
+    </label>
+      <button class="modal-form_btn wpcf7-submit">ОТПРАВИТЬ ЗАПРОС</button>
+    </form>
+  </div>
+</div>
 
 
-    <div class="overlay container">
-        <div class="wrapper__form">
-            <h2 class="modal__title">Заказать звонок</h2>
-            <form action="" class="form__items">
-                <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
-              <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
-              <p>
-                Поля, отмеченные *, обязательны для заполнения.
-            </p>
-            <label for="#" class="modal_privacy">
-              <input type="checkbox" checked="checked"  required>
-              <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
-            </label>
-              <button class="modal-form_btn wpcf7-submit">ОТПРАВИТЬ ЗАПРОС</button>
-            </form>
-          </div>
-          <div class="wrapper__form">
-            <h2 class="modal__title">Задать вопрос</h2>
-            <form action="" class="form__items">
-                <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
-              <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
-              <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш E-mail*">
-              <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control textarea"  placeholder="Задайте ваш вопрос*"></textarea>
-              <p>
-                Поля, отмеченные *, обязательны для заполнения.
-            </p>
-            <label for="#" class="modal_privacy">
-              <input type="checkbox" checked="checked"  required>
-              <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
-            </label>
-              <button class="modal-form_btn wpcf7-submit">ОТПРАВИТЬ</button>
-            </form>
-          </div>
-          <div class="wrapper__form">
-            <h2 class="modal__title">Заказать звонок</h2>
-            <form action="" class="form__items">
-                <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
-              <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
-              <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"   required placeholder="Ваш E-mail*">
-              <textarea   name="" id="123" cols="30" rows="10" class="wpcf7-form-control text"  placeholder="Ваше сообщение*"></textarea>
-              <p>
-                Поля, отмеченные *, обязательны для заполнения.
-            </p>
-            <label for="#" class="modal_privacy">
-              <input type="checkbox" checked="checked"  required>
-              <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
-            </label>
-              <button class="modal-form_btn wpcf7-submit">ЗАКАЗАТЬ ЗВОНОК</button>
-            </form>
-          </div>
-          <div class="wrapper__form">
-            <h2 class="modal__title">Оставить заявку</h2>
-            <form action="" class="form__items">
-                <input name="name" type="name" id="name" class="modal-form__input wpcf7-form-control"   required placeholder="Ваше имя*">
-              <input name="phone" type="tell" id="phone" class="modal-form__input wpcf7-form-control tell"   required placeholder="Ваш Телефон*">
-              <input name="email" type="text" id="email" class="modal-form__input wpcf7-form-control"  placeholder="Ваш E-mail">
-              <input name="text" type="text" id="text" class="modal-form__input wpcf7-form-control"   required placeholder="Город монтажа*">
-              <input name="text" type="text" id="text" class="modal-form__input wpcf7-form-control"   required placeholder="Площадь помещения*">
-              <div class="input_wrapper" data-required="Максимум 2000 символов">
-                <textarea   name="" id="" cols="30" rows="10" class="wpcf7-form-control text"  placeholder="Оставьте ваши пожелания, мы их обязательно учтем (по дизайну, галогенератору, бюджету)"></textarea>
-              </div>
-              <p>
-                Поля, отмеченные *, обязательны для заполнения.
-            </p>
-            <label for="#" class="modal_privacy">
-              <input type="checkbox" checked="checked"  required>
-              <p>Нажимая на кнопку, вы соглашаетесь с <a href=""> Соглашением </a> и <a href=""> Политикой конфиденциальности</a></p>
-            </label>
-              <button class="modal-form_btn wpcf7-submit">ОТПРАВИТЬ ЗАПРОС</button>
-            </form>
-          </div>
-    </div>
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/js.js"></script>
+
     <script src="inputmask.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </body>
 </html>
